refactor: insert를 save로 메서드명 변경 및 OrderItem 삭제 기능 구현